    * configVarList.read_environment - new parameter 'regex' to filter the environment variables being read
    * InstlInstanceBase.read_include_node now accepts *args, **kwargs
    * InstlInstanceBase.write_batch_file now creates the directory for the batch file
    * New base class for reading yaml files: aYaml.YamlReader
    * New class ConfigVarYamlReader inherits from aYaml.YamlReader

2/6/2016 1.2.2.0

    user visible changes client:
    * Fixed the progress count when creating sync sub-folders
    * sync command batch file creates sync folder manifest before and after it does it's work
    * copy command batch file creates sync folder manifest before it does it's work
    * Allow multiple guids per IID
    * New options for Robocopy to reduce verbosity
    * PlatformSpecificHelperMac.unlock will print its output to /dev/null because we do not care for the error message if the items being unlocked do not exists
    * utils.folder_listing adds comments with date the manifest was created and the folder(s) being manifested
    * Fixed ls command to properly handle missing folder and report them in the output

    programmer visible changes:
    * removed readline and colorama from test_import - they are needed only for interactive mode and should not create an error on compilation.
    * New functions InstlClient.create_folder_manifest_command  InstlClient.create_sync_folder_manifest_command
    * Fixed InstlMisc to properly count progress and not display a message about "curr_progress != actual_progress" which was wrong
    * Fixed utils.max_widths to handle empty lists

3/1/2016 1.1.1.0

    user visible changes client:
    * sync-folder-manifest.txt is created if ECHO_LOG_FILE is supplied and in the same folder.
    * Weird variable name __USRER_ID__ renamed __USER_ID__
    * Mac: add -m a+rwx to all mkdir commands, mkdir_with_owner is now 'mkdir -p -m a+rwx "$1"' & 'chown $(__USER_ID__): "$1"'
    * Win: robocopy /R:9 /W1 instead of /R:3 /W:3